# minimal_agent

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
example/: reactAct_test.py
minimal_agent/: message.py
minimal_agent/agent/: __init__.py  base.py  react_agent.py
minimal_agent/llm/: base.py  qwen.py
minimal_agent/memory/: base.py
minimal_agent/tools/: base.py  docs_parser.py  python_executor.py  test_docs_parser.py  types.py  websearch.py
